--- a/src/styles/lib/github-markdown.less
+++ b/src/styles/lib/github-markdown.less
@@ -199,6 +199,7 @@ html {
   max-width: 100%;
   box-sizing: content-box;
   background-color: var(--color-canvas-default);
+  border-radius: 8px;
 }
 
 .markdown-body code,
@@ -823,12 +824,12 @@ html {
 
 .markdown-body .highlight pre,
 .markdown-body pre {
-  padding: 16px;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
   background-color: var(--color-canvas-subtle);
   border-radius: 6px;
+  border: 1px solid #f0f0f0;
 }
 
 .markdown-body pre code,
