--- a/src/styles/lib/style.less
+++ b/src/styles/lib/style.less
@@ -25,25 +25,19 @@
   }
 
   code.hljs {
-    padding: 0;
+    padding: 15px 15px 11px 15px
   }
 
   .code-block {
-    &-wrapper {
-      position: relative;
-      padding-top: 24px;
-    }
 
     &-header {
-      position: absolute;
-      top: 5px;
-      right: 0;
       width: 100%;
-      padding: 0 1rem;
+      padding: 5px 15px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
       color: #b3b3b3;
+      border-bottom: solid 1px rgb(239, 239, 245);
 
       &__copy {
         cursor: pointer;
